CAAERS-713 finally fixed some old annoying UI bugs 1) missing drop shadow below tasks in IE, 2)tasks coming on top of window overlay in FF, 3) last tab in workflow tabs having an unwanted line break in IE
SVN-Revision: 10936

--- a/caAERS/software/web/src/main/webapp/css/ie.css
+++ b/caAERS/software/web/src/main/webapp/css/ie.css
@@ -16,6 +16,7 @@ html div.row, * html .autoclear {
 }
 .workflow-tabs {
 width:951px;
+z-index:-1;
 }
 .pane {
 	/* Fix the issue of summary not aligned properly */
